profile image stretch issue resolved

--- a/css/whoToFollow.css
+++ b/css/whoToFollow.css
@@ -69,8 +69,3 @@
   text-decoration: none;
   color: rgba(29, 161, 242, 1);
 }
-/* @media (max-width: 60vw) {
-  .who-to-follow .person {
-    display: block;
-  }
-} */
